--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "coffee-mug-recruitment-task",
   "version": "1.0.0",
   "description": "Coffee Mug recruitment task",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "npx ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.2.0",
+    "typescript": "^5.5.4"
   }
 }
