--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "npx ts-node server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint server.ts src",
+    "format": "prettier . --write"
   },
   "keywords": [
     "recruitment"
@@ -19,8 +21,14 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
-    "typescript": "^5.5.4"
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1"
   }
 }
