--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-    "printWidth": 120,
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true,
-    "bracketSpacing": true
+	"printWidth": 120,
+	"trailingComma": "es5",
+	"useTabs": true,
+	"tabWidth": 4,
+	"semi": false,
+	"singleQuote": true,
+	"bracketSpacing": true
 }
