--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/node": "^22.2.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "nodemon": "^3.1.4",
     "prettier": "3.3.3",
     "ts-node": "^10.9.2",
