--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "lowdb": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
