--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "CommonJS",
+		"module": "ES2022",
 		"target": "ES2020",
 		"outDir": "dist",
 		"esModuleInterop": true,
