--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "recruitment"
   ],
   "type": "module",
-  "engines": { "node": ">=18"},
+  "engines": {
+    "node": ">=18"
+  },
   "author": "Konrad Cielecki",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "lowdb": "^7.0.1"
   },
   "devDependencies": {
